@@ -2,7 +2,8 @@ This is the C SDK for EdgeX device services.
 
 Changes for 2.3.0 "Levski":
 
-- Implement device commands via redis MessageQueue
+- Publish metrics on pub/sub (redis only)
+- Implement device commands on pub/sub (redis only)
 - Implement MaxEventSize configuration
 
 Changes for 2.2.0 "Kamakura":
